db-rs-init.yml

kind: Deployment
apiVersion: apps/v1
metadata:
  name: rocketchat-db-init
  namespace: namespace-name
spec:
  selector:
    matchLabels:
      service: rocketchat-db-init
  template:
    metadata:
      labels:
        service: rocketchat-db-init
    spec:
      volumes:
        - name: rocketchat-db-init-script
          configMap:
            name: rocketchat-db-init-script
      containers:
      - name: "rocketchat-db-init"
        image: "mongo:4.0"
        command:
          - /bin/sh
        args:
          - /tmp/init.sh
        volumeMounts:
        - mountPath: "/tmp/init.sh"
          name: rocketchat-db-init-script
          subPath: "init.sh"
